--- a/seacabs/src/main/resources/cocktailCreationGUI.fxml
+++ b/seacabs/src/main/resources/cocktailCreationGUI.fxml
@@ -7,19 +7,19 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="playtest.GUIController">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="playtest.GUIController">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
             <Button id="saveRecipeButton" fx:id="saveRecipeButton" layoutX="520.0" layoutY="352.0" mnemonicParsing="false" onAction="#saveRecipeOnClick" text="Save Recipe" />
             <TextField id="cnameTextField" fx:id="cnameTextField" layoutX="36.0" layoutY="33.0" promptText="Name of Cocktail" />
-            <TextField layoutX="36.0" layoutY="74.0" promptText="Source" />
-            <TextField layoutX="448.0" layoutY="20.0" promptText="Garnish" />
+            <TextField id="cSourceTextField" fx:id="cSourceTextField" layoutX="36.0" layoutY="74.0" promptText="Source" />
+            <TextField id="cGarnishTextField" fx:id="cGarnishTextField" layoutX="448.0" layoutY="20.0" promptText="Garnish" />
             <ChoiceBox layoutX="459.0" layoutY="61.0" prefWidth="150.0" />
             <ChoiceBox layoutX="459.0" layoutY="100.0" prefWidth="150.0" />
-            <TextField layoutX="448.0" layoutY="141.0" promptText="Special Instructions" />
+            <TextField id="cSpecialTextField" fx:id="cSpecialTextField" layoutX="448.0" layoutY="141.0" promptText="Special Instructions" />
             <ChoiceBox layoutX="359.0" layoutY="352.0" prefWidth="150.0" />
-            <TextArea layoutX="22.0" layoutY="178.0" prefHeight="200.0" prefWidth="200.0" promptText="Tasting Notes" />
+            <TextArea id="cTasNotTextArea" fx:id="cTasNotTextArea" layoutX="22.0" layoutY="178.0" prefHeight="200.0" prefWidth="200.0" promptText="Tasting Notes" />
       </children>
     </AnchorPane>
   </children>
