--- a/seacabs/src/main/resources/cocktailCreationGUI.fxml
+++ b/seacabs/src/main/resources/cocktailCreationGUI.fxml
@@ -15,8 +15,8 @@
             <TextField id="cnameTextField" fx:id="cnameTextField" layoutX="36.0" layoutY="33.0" promptText="Name of Cocktail" />
             <TextField id="cSourceTextField" fx:id="cSourceTextField" layoutX="36.0" layoutY="74.0" promptText="Source" />
             <TextField id="cGarnishTextField" fx:id="cGarnishTextField" layoutX="448.0" layoutY="20.0" promptText="Garnish" />
-            <ChoiceBox layoutX="459.0" layoutY="61.0" prefWidth="150.0" />
-            <ChoiceBox layoutX="459.0" layoutY="100.0" prefWidth="150.0" />
+            <ChoiceBox id="servedChoiceBox" fx:id="servedChoiceBox" layoutX="459.0" layoutY="61.0" prefWidth="150.0" />
+            <ChoiceBox id="styleChoiceBox" fx:id="styleChoiceBox" layoutX="459.0" layoutY="100.0" prefWidth="150.0" />
             <TextField id="cSpecialTextField" fx:id="cSpecialTextField" layoutX="448.0" layoutY="141.0" promptText="Special Instructions" />
             <ChoiceBox layoutX="359.0" layoutY="352.0" prefWidth="150.0" />
             <TextArea id="cTasNotTextArea" fx:id="cTasNotTextArea" layoutX="22.0" layoutY="178.0" prefHeight="200.0" prefWidth="200.0" promptText="Tasting Notes" />
