--- a/seacabs/src/main/resources/cocktailCreationGUI.fxml
+++ b/seacabs/src/main/resources/cocktailCreationGUI.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -11,15 +13,32 @@
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
-            <Button id="saveRecipeButton" fx:id="saveRecipeButton" layoutX="520.0" layoutY="352.0" mnemonicParsing="false" onAction="#saveRecipeOnClick" text="Save Recipe" />
-            <TextField id="cnameTextField" fx:id="cnameTextField" layoutX="36.0" layoutY="33.0" promptText="Name of Cocktail" />
-            <TextField id="cSourceTextField" fx:id="cSourceTextField" layoutX="36.0" layoutY="74.0" promptText="Source" />
-            <TextField id="cGarnishTextField" fx:id="cGarnishTextField" layoutX="448.0" layoutY="20.0" promptText="Garnish" />
-            <ChoiceBox id="servedChoiceBox" fx:id="servedChoiceBox" layoutX="459.0" layoutY="61.0" prefWidth="150.0" />
-            <ChoiceBox id="styleChoiceBox" fx:id="styleChoiceBox" layoutX="459.0" layoutY="100.0" prefWidth="150.0" />
-            <TextField id="cSpecialTextField" fx:id="cSpecialTextField" layoutX="448.0" layoutY="141.0" promptText="Special Instructions" />
-            <ChoiceBox id="fileChoiceBox" fx:id="fileChoiceBox" layoutX="359.0" layoutY="352.0" prefWidth="150.0" />
-            <TextArea id="cTasNotTextArea" fx:id="cTasNotTextArea" layoutX="22.0" layoutY="178.0" prefHeight="200.0" prefWidth="200.0" promptText="Tasting Notes" />
+            <Button id="saveRecipeButton" fx:id="saveRecipeButton" layoutX="579.0" layoutY="512.0" mnemonicParsing="false" onAction="#saveRecipeOnClick" text="Save Recipe" />
+            <TextField id="cnameTextField" fx:id="cnameTextField" layoutX="40.0" layoutY="49.0" promptText="Name of Cocktail" />
+            <TextField id="cSourceTextField" fx:id="cSourceTextField" layoutX="40.0" layoutY="103.0" promptText="Source" />
+            <TextField id="cGarnishTextField" fx:id="cGarnishTextField" layoutX="40.0" layoutY="151.0" promptText="Garnish(es)" />
+            <ChoiceBox id="servedChoiceBox" fx:id="servedChoiceBox" layoutX="50.0" layoutY="194.0" prefWidth="150.0" />
+            <ChoiceBox id="styleChoiceBox" fx:id="styleChoiceBox" layoutX="50.0" layoutY="243.0" prefWidth="150.0" />
+            <TextField id="cSpecialTextField" fx:id="cSpecialTextField" layoutX="40.0" layoutY="299.0" promptText="Special Instructions" />
+            <ChoiceBox id="fileChoiceBox" fx:id="fileChoiceBox" layoutX="422.0" layoutY="512.0" prefWidth="150.0" />
+            <TextArea id="cTasNotTextArea" fx:id="cTasNotTextArea" layoutX="25.0" layoutY="338.0" prefHeight="200.0" prefWidth="200.0" promptText="Tasting Notes" />
+            <TableView id="ingredientTableView" fx:id="ingredientTableView" layoutX="227.0" layoutY="19.0" prefHeight="345.0" prefWidth="625.0">
+               <columns>
+                  <TableColumn id="cTableName" prefWidth="186.0" text="Name" />
+                  <TableColumn id="cTableType" prefWidth="144.0" text="Type" />
+                  <TableColumn id="cTableAmount" prefWidth="107.0" text="Amount" />
+                  <TableColumn id="cTableUnit" prefWidth="99.0" text="Unit" />
+                  <TableColumn id="cTableDelete" prefWidth="88.0" text="Delete" />
+               </columns>
+            </TableView>
+            <AnchorPane layoutX="257.0" layoutY="376.0" prefHeight="124.0" prefWidth="584.0">
+               <children>
+                  <Button layoutX="137.0" layoutY="84.0" mnemonicParsing="false" text="Add Ingredient" />
+                  <ChoiceBox id="ingredientPickerChoiceBox" fx:id="ingredientPickerChoiceBox" layoutY="14.0" prefHeight="26.0" prefWidth="387.0" />
+                  <TextField layoutX="158.0" layoutY="49.0" prefHeight="26.0" prefWidth="72.0" promptText="Amount" />
+                  <Button layoutX="437.0" layoutY="49.0" mnemonicParsing="false" text="Create Ingredient" />
+               </children>
+            </AnchorPane>
       </children>
     </AnchorPane>
   </children>
