--- a/seacabs/src/main/resources/cocktailCreationGUI.fxml
+++ b/seacabs/src/main/resources/cocktailCreationGUI.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.TableColumn?>
@@ -9,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="playtest.GUIController">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="playtest.ctCreationGUIController">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
@@ -22,7 +23,7 @@
             <TextField id="cSpecialTextField" fx:id="cSpecialTextField" layoutX="40.0" layoutY="299.0" promptText="Special Instructions" />
             <ChoiceBox id="fileChoiceBox" fx:id="fileChoiceBox" layoutX="422.0" layoutY="512.0" prefWidth="150.0" />
             <TextArea id="cTasNotTextArea" fx:id="cTasNotTextArea" layoutX="25.0" layoutY="338.0" prefHeight="200.0" prefWidth="200.0" promptText="Tasting Notes" />
-            <TableView id="ingredientTableView" fx:id="ingredientTableView" layoutX="227.0" layoutY="19.0" prefHeight="345.0" prefWidth="625.0">
+            <TableView id="ingredientTableView" fx:id="ingredientTableView" layoutX="267.0" layoutY="14.0" prefHeight="345.0" prefWidth="625.0">
                <columns>
                   <TableColumn id="cTableName" fx:id="cTableName" prefWidth="186.0" text="Name" />
                   <TableColumn id="cTableType" fx:id="cTableType" prefWidth="144.0" text="Type" />
@@ -35,12 +36,15 @@
                   <Button id="addIngredientButton" fx:id="addIngredientButton" layoutX="136.0" layoutY="84.0" mnemonicParsing="false" onAction="#addIngredientOnClick" text="Add Ingredient" />
                   <ChoiceBox id="ingredientPickerChoiceBox" fx:id="ingredientPickerChoiceBox" layoutY="14.0" prefHeight="26.0" prefWidth="387.0" />
                   <TextField id="ingredientAmountTextField" fx:id="ingredientAmountTextField" layoutX="101.0" layoutY="49.0" prefHeight="26.0" prefWidth="72.0" promptText="Amount" />
-                  <Button layoutX="437.0" layoutY="84.0" mnemonicParsing="false" text="Create Ingredient" />
+                  <Button id="createIngButton" fx:id="createIngButton" layoutX="484.0" layoutY="84.0" mnemonicParsing="false" onAction="#createIngButtonOnClick" text="Create Ingredient" />
                   <ChoiceBox id="unitChoiceBox" fx:id="unitChoiceBox" layoutX="216.0" layoutY="49.0" prefHeight="26.0" prefWidth="72.0" />
-                  <Button id="removeIngredientButton" fx:id="removeIngredientButton" layoutX="446.0" layoutY="14.0" mnemonicParsing="false" onAction="#removeIngredientOnClick" text="Remove Ingredient" />
+                  <Button id="removeIngredientButton" fx:id="removeIngredientButton" layoutX="479.0" layoutY="14.0" mnemonicParsing="false" onAction="#removeIngredientOnClick" text="Remove Ingredient" />
                </children>
             </AnchorPane>
       </children>
+         <padding>
+            <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
+         </padding>
     </AnchorPane>
   </children>
 </VBox>
