--- a/seacabs/src/main/resources/ingCreationGUI.fxml
+++ b/seacabs/src/main/resources/ingCreationGUI.fxml
@@ -12,7 +12,7 @@
       <Button id="ingCreateButton" fx:id="ingCreateButton" layoutX="293.0" layoutY="398.0" mnemonicParsing="false" onAction="#ingCreateButtonOnClick" text="Create Ingredient" />
       <TextField fx:id="ingNameTextField" layoutX="274.0" layoutY="56.0" promptText="Name of Ingredient" />
       <TextArea id="ingDescTextArea" fx:id="ingDescTextArea" layoutX="154.0" layoutY="172.0" prefHeight="99.0" prefWidth="409.0" promptText="Description of Ingredient" />
-      <ChoiceBox id="ingTypeChoiceBox" fx:id="ingTypeChoiceBox" layoutX="284.0" layoutY="113.0" prefWidth="150.0" />
+      <ChoiceBox id="ingGroupChoiceBox" fx:id="ingGroupChoiceBox" layoutX="284.0" layoutY="113.0" prefWidth="150.0" />
       <ChoiceBox id="ingFileChoiceBox" fx:id="ingFileChoiceBox" layoutX="285.0" layoutY="330.0" prefWidth="150.0" />
    </children>
    <padding>
