--- a/seacabs/src/main/resources/cocktailCreationGUI.fxml
+++ b/seacabs/src/main/resources/cocktailCreationGUI.fxml
@@ -26,7 +26,7 @@
             <TableView id="ingredientTableView" fx:id="ingredientTableView" layoutX="267.0" layoutY="14.0" prefHeight="345.0" prefWidth="625.0">
                <columns>
                   <TableColumn id="cTableName" fx:id="cTableName" prefWidth="186.0" text="Name" />
-                  <TableColumn id="cTableGroup" fx:id="cTableGroup" prefWidth="144.0" text="Type" />
+                  <TableColumn id="cTableGroup" fx:id="cTableGroup" prefWidth="144.0" text="Group" />
                   <TableColumn id="cTableAmount" fx:id="cTableAmount" prefWidth="107.0" text="Amount" />
                   <TableColumn id="cTableUnit" fx:id="cTableUnit" prefWidth="99.0" text="Unit" />
                </columns>
